# q2-deseq2

./: .copier-answers.yml  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  dependent-issues.yaml
conda-recipe/: meta.yaml
environment-files/: q2-deseq2-qiime2-amplicon-dev.yml  q2-deseq2-qiime2-amplicon-release.yml  q2-deseq2-qiime2-moshpit-2026.1.yml  q2-deseq2-qiime2-tiny-2026.1.yml
q2_deseq2/: __init__.py  _deseq2.py  _formats.py  _frame_utils.py  _methods.py  _run_data.py  _transformers.py  _types.py  _visualizers.py  citations.bib  methods.py  pipelines.py  plugin_setup.py  run_deseq2.R  visualizers.py
q2_deseq2/_methodlib/: __init__.py  analytics.py  prep.py  runner.py
q2_deseq2/assets/: deseq2_report.html  sample_distances.html  table.html  volcano_spec.json
q2_deseq2/assets/css/: styles.css
q2_deseq2/assets/deseq2/: index.html  sample_distances.html  table.html
q2_deseq2/assets/js/: linked_plots.js  sample_distances.js
q2_deseq2/assets/vega/: count_matrix_heatmap.json  ma.json  sample_distance_heatmap.json
q2_deseq2/r/: run_deseq2.R  test_run_deseq2.R
q2_deseq2/r/tests/: test_run_deseq2.R
q2_deseq2/tests/: __init__.py  test_integration.py  test_methods.py  test_pipelines.py  test_types.py  test_visualizers.py
q2_deseq2/tests/data/: condition-single-level.tsv  condition-three-levels.tsv  condition-unmatched.tsv  condition.tsv  table-1.tsv  (+13 more)
q2_deseq2/types/: __init__.py  _formats.py  _transformers.py  _types.py
q2_deseq2/utils/: __init__.py  analytics.py  frame_utils.py  prep.py  run_data.py  runner.py
(+23 files in other folders)
